// Перечисление типов класса
enum ClassType {
    FIRST, BUSINESS, ECONOMY
}
